# gps-freq-counter

./: .gitmodules  LICENSE  README.md  schema.odg
fpga/: .gitignore  build.sbt  vcd_autolink.fish
fpga/bsdl/: 10M08SAE144.bsd
fpga/quartus/: altera_altpll.ppf  altera_altpll.qip  altera_altpll.v  flash.urjtag  full.sh  gps-freq-counter.ipregen.rpt  gps-freq-counter.qpf  gps-freq-counter.qsf  gps-freq-counter.sdc
fpga/src/main/resources/: gfc.memh  gfc.mif  picorv32.v
fpga/src/main/scala/: CRC.scala  Debouncer.scala  FillMemory.scala  Main.scala  Memory.scala  MemoryMux.scala  PPSCounter.scala  PicoRV.scala  PicoRV32.scala  Register.scala  SPI.scala  Top.scala  UART.scala  USB.scala  Utils.scala
fpga/src/test/resources/: picorv_test_fib.memh  picorv_test_spi.memh  verilog_initialized_memory.hex
fpga/src/test/scala/: BetterPeekPokeTester.scala  BusHelper.scala  BusTester.scala  CRCTests.scala  DebouncerTests.scala  GFCSpec.scala  MemoryMuxTests.scala  MemoryTests.scala  PPSCounterTests.scala  PicoRVTests.scala  RegisterTests.scala  SPITests.scala  UARTTests.scala  USBTests.scala
mech/: box.scad  box.stl
pcb/: .gitignore  fpga.sch  gfc-cache.lib  gfc-rescue.lib  gfc.kicad_pcb  gfc.pro  gfc.sch  gfc.xml  gps.sch  power.sch
pcb/footprints.pretty/: 1PAD.kicad_mod  ASV-XX.kicad_mod  MS621FE.kicad_mod  NEO-6.kicad_mod  OLED_SPI.kicad_mod  USB_Micro-B.kicad_mod  WSON-6-DRV.kicad_mod  XH414HG-IV01E.kicad_mod  label_antenna.kicad_mod  label_fpga.kicad_mod  label_gps.kicad_mod  label_input.kicad_mod  label_jtag.kicad_mod  label_name.kicad_mod  label_oled.kicad_mod
pcb/lib/: 10M08SAE144.lib  10m08sae144.lib  asv-xx.lib  lp5912.lib  neo-6m.lib  oled_spi.lib  sma.lib  sn74lv1t34dbv.lib
py/: gfc.py
src/: CMakeLists.txt  bintoverilog.py  cmds.h  generate_sprites.py  generate_sprites.sh  linker.ld  main.c  nmea.c  oled.c  oled.h  pps.c  pps.h  regs.h  reset.c  reset.s  spi.c  spi.h  test_fib.c  test_spi.c  uart.c  ublox.c  ublox.h  ui.c  ui.h  usb.c  usb.h  usb_protocol.h  utils.h
utils/: 10m08sa.txt  altera.py
